<resources>
    <string name="app_name">TMDB People</string>
    <string name="person_image">Person Image</string>
    <string name="search">Search</string>
    <string name="type_person_name">Type person name</string>
    <string name="refresh">Refresh</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="download">Download</string>
    <string name="image_downloaded">Image Downloaded</string>
    <string name="failed_image_downloaded">Failed to Download Image</string>
    <string name="person_details">Person Details</string>
    <string name="popular_people">Popular People</string>
    <string name="search_for_person">Search for Person</string>
    <string name="network_error">Network Error</string>
    <string name="server_error">Server Error</string>
    <string name="permission_denied">Permission Denied</string>
</resources>
